--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.millieen</groupId>
     <artifactId>LeetCode</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>1_TwoSum</module>
+    </modules>
 
 
 </project>
