--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,7 @@ on: [push]
 
 jobs:
   build:
-
-    runs-on: maven:3-jdk-8
+    runs-on: Maven release
 
     steps:
     - uses: actions/checkout@v1
