--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,13 @@ on: [push]
 
 jobs:
   build:
-    runs-on: Maven release
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v1
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
     - name: build
       run: mvn clean install
